kubernetes/cyphria_applications_roles/frontend/application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyphria-frontend-deployment
  labels:
    app.kubernetes.io/name: frontend
spec: 
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
    spec:
      containers:
        - name: cyphria-frontend
          image: ghcr.io/vchen7629/cyphria-frontend:latest
