kubernetes/cyphria_applications_roles/frontend/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: frontend
spec: 
  type: ClusterIP
  selector: 
    app.kubernetes.io/name: frontend
  ports:
    - port: 59
      targetPort: 3000
      protocol: TCP
      name: http
