kubernetes/cyphria_applications_roles/frontend/application/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: frontend
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: cyphria.com
    external-dns.alpha.kubernetes.io/target: 37371dbf-2959-43a0-ad54-83f7ce21cb51.cfargotunnel.com
spec: 
  ingressClassName: nginx
  rules:
    - host: cyphria.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
    - host: "*.cyphria.com"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
